--- a/app/src/main/res/layout/container_recyclerview_item.xml
+++ b/app/src/main/res/layout/container_recyclerview_item.xml
@@ -12,6 +12,25 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#E91E63" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/buttonLinear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="linear" />
+
+        <Button
+            android:id="@+id/buttonGrid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="grid" />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewHorizontal"
         android:layout_width="match_parent"
