--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,84 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="kr.co.ldcc.contentsservice.model.ViewModel" />
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#000000"
         android:orientation="vertical"
         tools:context=".activity.MainActivity">
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/editTextSearch"
+            android:layout_width="362dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="2dp"
+            android:background="@drawable/edittext_border"
+            android:ems="10"
+            android:hint="@string/edittext_hint"
+            android:inputType="textPersonName"
+            android:padding="3dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/buttonSearch"
+            android:layout_width="37dp"
+            android:layout_height="35dp"
+            android:background="@android:drawable/ic_menu_search"
+            app:layout_constraintLeft_toRightOf="@id/editTextSearch"
+            app:layout_constraintTop_toTopOf="@id/editTextSearch" />
+
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="6dp"
-            android:layout_marginRight="3dp"
-            android:orientation="horizontal">
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="30dp"
+            android:background="#EAEAEA"
+            app:layout_constraintTop_toBottomOf="@id/editTextSearch">
 
-            <EditText
-                android:id="@+id/editTextSearch"
-                android:layout_width="362dp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="2dp"
-                android:background="@drawable/edittext_border"
-                android:ems="10"
-                android:hint="@string/edittext_hint"
-                android:inputType="textPersonName"
-                android:padding="3dp"/>
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="전체보기" />
 
-            <Button
-                android:id="@+id/buttonSearch"
-                android:layout_width="37dp"
-                android:layout_height="35dp"
-                android:background="@android:drawable/ic_menu_search" />
-        </LinearLayout>
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="북마크" />
 
-        <LinearLayout
+        </com.google.android.material.tabs.TabLayout>
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="3dp"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tabLayout"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="20dp"
+            />
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabLayout"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginLeft="4dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginBottom="30dp"
-                android:background="#EAEAEA">
-
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="전체보기" />
-
-                <com.google.android.material.tabs.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="북마크" />
-
-            </com.google.android.material.tabs.TabLayout>
-
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/viewPager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
