[ADD] SharedPreference 기능 추가

--- a/app/src/main/res/layout/container_recyclerview_item.xml
+++ b/app/src/main/res/layout/container_recyclerview_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="kr.co.ldcc.contentsservice.model.ViewModel" />
+            type="kr.co.ldcc.contentsservice.model.viewmodel.SearchViewModel" />
 
     </data>
 
