--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -25,10 +25,11 @@
 
         <Button
             android:id="@+id/buttonBookmark"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
             android:background="@drawable/button_bookmark"
             android:layout_marginRight="3dp"
+            app:layout_constraintBottom_toBottomOf="@id/textViewWrite"
             app:layout_constraintRight_toLeftOf="@id/textViewBookmark"
             app:layout_constraintTop_toTopOf="@id/textViewWrite" />
 
@@ -39,20 +40,21 @@
             android:gravity="center"
             android:text="북마크"
             android:textColor="#FFC107"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            android:layout_marginRight="3dp"
+            android:layout_marginRight="5dp"
             app:layout_constraintRight_toLeftOf="@id/buttonReplyWrite"
             app:layout_constraintTop_toTopOf="@id/textViewWrite" />
 
         <Button
             android:id="@+id/buttonReplyWrite"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="0dp"
             android:background="@drawable/button_write"
             android:layout_marginRight="3dp"
             app:layout_constraintRight_toLeftOf="@id/textViewWrite"
-            app:layout_constraintTop_toTopOf="@id/textViewWrite" />
+            app:layout_constraintTop_toTopOf="@id/textViewWrite"
+            app:layout_constraintBottom_toBottomOf="@id/textViewWrite" />
 
         <TextView
             android:id="@+id/textViewWrite"
@@ -61,22 +63,43 @@
             android:gravity="center"
             android:text="댓글쓰기"
             android:textColor="#FFC107"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:layout_marginRight="3dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imageView"
             android:layout_marginTop="10dp"/>
 
+        <TextView
+            android:id="@+id/textViewReplyTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            app:layout_constraintTop_toBottomOf="@+id/textViewWrite"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:text="댓글"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textViewReplyCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            app:layout_constraintLeft_toRightOf="@id/textViewReplyTitle"
+            app:layout_constraintTop_toTopOf="@id/textViewReplyTitle"
+            android:textSize="18sp"
+            android:textColor="#FF0000" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewReply"
             android:layout_width="match_parent"
+            android:layout_marginTop="3dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/textViewWrite"
+            app:layout_constraintTop_toBottomOf="@id/textViewReplyTitle"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
+            app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
