--- a/app/src/main/res/layout/reply_recyclerview_item.xml
+++ b/app/src/main/res/layout/reply_recyclerview_item.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginTop="2dp"
+    >
 
     <ImageView
         android:id="@+id/imageViewProfile"
@@ -20,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#E91E63"
+        android:layout_marginLeft="2dp"
         app:layout_constraintLeft_toRightOf="@id/imageViewProfile"
         app:layout_constraintTop_toTopOf="@id/imageViewProfile" />
 
@@ -28,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
+        android:layout_marginLeft="2dp"
         app:layout_constraintLeft_toRightOf="@id/imageViewProfile"
         app:layout_constraintTop_toBottomOf="@id/textViewUserId" />
 </androidx.constraintlayout.widget.ConstraintLayout>
