--- a/app/src/main/res/layout/activity_contents.xml
+++ b/app/src/main/res/layout/activity_contents.xml
@@ -2,11 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-<data>
-    <variable
-        name="viewModel"
-        type="kr.co.ldcc.contentsservice.model.viewmodel.ReplyViewModel" />
-</data>
+
+    <data>
+        <variable
+            name="viewModel"
+            type="kr.co.ldcc.contentsservice.model.viewmodel.ReplyViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,8 +29,9 @@
             android:id="@+id/buttonBookmark"
             android:layout_width="50dp"
             android:layout_height="0dp"
-            android:background="@drawable/button_bookmark"
             android:layout_marginRight="3dp"
+            android:background="@drawable/button_bookmark"
+            android:textIsSelectable="false"
             app:layout_constraintBottom_toBottomOf="@id/textViewWrite"
             app:layout_constraintRight_toLeftOf="@id/textViewBookmark"
             app:layout_constraintTop_toTopOf="@id/textViewWrite" />
@@ -37,12 +40,12 @@
             android:id="@+id/textViewBookmark"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
+            android:layout_marginRight="5dp"
             android:gravity="center"
             android:text="북마크"
             android:textColor="#FFC107"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:layout_marginRight="5dp"
             app:layout_constraintRight_toLeftOf="@id/buttonReplyWrite"
             app:layout_constraintTop_toTopOf="@id/textViewWrite" />
 
@@ -50,56 +53,56 @@
             android:id="@+id/buttonReplyWrite"
             android:layout_width="50dp"
             android:layout_height="0dp"
-            android:background="@drawable/button_write"
             android:layout_marginRight="3dp"
+            android:background="@drawable/button_write"
+            app:layout_constraintBottom_toBottomOf="@id/textViewWrite"
             app:layout_constraintRight_toLeftOf="@id/textViewWrite"
-            app:layout_constraintTop_toTopOf="@id/textViewWrite"
-            app:layout_constraintBottom_toBottomOf="@id/textViewWrite" />
+            app:layout_constraintTop_toTopOf="@id/textViewWrite" />
 
         <TextView
             android:id="@+id/textViewWrite"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="3dp"
             android:gravity="center"
             android:text="댓글쓰기"
             android:textColor="#FFC107"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:layout_marginRight="3dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageView"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintTop_toBottomOf="@id/imageView" />
 
         <TextView
             android:id="@+id/textViewReplyTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="3dp"
-            app:layout_constraintTop_toBottomOf="@+id/textViewWrite"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:text="댓글"
             android:textColor="#FFFFFF"
+            android:textSize="18sp"
             android:textStyle="bold"
-            android:textSize="18sp" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewWrite" />
 
         <TextView
             android:id="@+id/textViewReplyCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="3dp"
-            app:layout_constraintLeft_toRightOf="@id/textViewReplyTitle"
-            app:layout_constraintTop_toTopOf="@id/textViewReplyTitle"
+            android:textColor="#FF0000"
             android:textSize="18sp"
-            android:textColor="#FF0000" />
+            app:layout_constraintLeft_toRightOf="@id/textViewReplyTitle"
+            app:layout_constraintTop_toTopOf="@id/textViewReplyTitle" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewReply"
             android:layout_width="match_parent"
-            android:layout_marginTop="3dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/textViewReplyTitle"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="3dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textViewReplyTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
