--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".activity.LoginActivity">
@@ -13,29 +14,32 @@
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ci" />
 
     <ImageView
         android:id="@+id/imageViewMain"
         android:layout_width="wrap_content"
-        android:layout_height="504dp"
-        app:srcCompat="@drawable/main_image"
-        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
+        app:layout_constraintBottom_toTopOf="@id/buttonLogin"
+        app:srcCompat="@drawable/main_image" />
 
     <com.kakao.usermgmt.LoginButton
         android:id="@+id/buttonLogin"
         android:layout_width="319dp"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@id/imageViewMain"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/imageViewMain"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="20dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
